# sqlxum

./: .env.template  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
migrations/: 1_setup.sql  2_user.sql  README.md
src/: common.rs  config.rs  main.rs
src/db/: dispatch.rs  generic.rs  mod.rs  users.rs
src/models/: mod.rs
src/server/: database.rs  health.rs  mod.rs
