[package]
name = "sqlxum"
version = "0.1.0"
authors = [
    "Carlos A. Rueda <carueda@mbari.org>",
]
repository  = "https://github.com/mbari-org/sqlxum"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
chrono = { version = "0.4", features = ["serde"]}
clap = { version = "4.5", features = ["derive", "unstable-styles"] }
dotenvy = "0.15"
env_logger = "0.11"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
sysinfo = "0.30" # for the health check
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal"] }
utoipa = { version = "4.2", features = ["axum_extras"] } # OpenAPI
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
uuid = { version = "1.7.0", features = ["serde"] }
